FitLifeProLatest/force-app/main/default/objects/Trainer__c/fields/Availability_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Availability_Schedule__c</fullName>
    <label>Availability Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
                <label>Morning(6am to 12pm)</label>
            </value>
            <value>
                <fullName>Evening</fullName>
                <label>Evening(4pm to 9pm)</label>
            </value>
            <value>
                <fullName>Afternoon</fullName>
                <label>Afternoon(12pm to 4pm)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>