FitLifeProLatest/force-app/main/default/objects/Trainer__c/fields/Count_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Members__c</fullName>
    <label>Assigned Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>