FitLifeProLatest/force-app/main/default/objects/Trainer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Availability_Schedule__c</columns>
    <columns>Certifications__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>